--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  - Added --with-pid-dir option
  - Released 1.2.1pre26
 
+ - Compilation fix from Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
 20000115
  - Add --with-xauth-path configure directive and explicit test for
    /usr/openwin/bin/xauth for Solaris systems. Report from Anders 
