--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20000117
  - Clean up bsd-bindresvport.c. Use arc4random() for picking initial
    port, ignore EINVAL errors (Linux) when searching for free port.
+ - Revert __snprintf -> snprintf aliasing. Apparently Solaris 
+   __snprintf isn't. Report from Theo de Raadt <theo@cvs.openbsd.org>
 
 20000116
  - Renamed --with-xauth-path to --with-xauth
