--- a/INSTALL
+++ b/INSTALL
@@ -77,7 +77,9 @@ configuration files in /etc/ssh.
 If you are using PAM, you will need to manually install a PAM control
 file as "/etc/pam.d/sshd" (or wherever your system prefers to keep
 them). A generic PAM configuration is included as "sshd.pam.generic",
-you may need to edit it before using it on your system.
+you may need to edit it before using it on your system. If you are 
+using a recent version of Redhat Linux, the config file in 
+packages/redhat/sshd.pam should be more useful.
 
 There are a few other options to the configure script:
 
