- Fix rresvport_af failure errors (logic error in bsd-bindresvport.c)

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,8 +6,10 @@
  - Document location of Redhat PAM file in INSTALL.
  - Fixed X11 forwarding bug on Linux. libc advertises AF_INET6 
    INADDR_ANY_INIT addresses via getaddrinfo, but may not be able to 
-   deliver (no IPv6 kernel kernel support)
+   deliver (no IPv6 kernel support)
  - Released 1.2.1pre27
+
+ - Fix rresvport_af failure errors (logic error in bsd-bindresvport.c)
 
 20000116
  - Renamed --with-xauth-path to --with-xauth
