- Fix --with-ipaddr-display option test. Fix from Jarno Huuskonen    <jhuuskon@hytti.uku.fi>

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
  - Released 1.2.1pre27
 
  - Fix rresvport_af failure errors (logic error in bsd-bindresvport.c)
+ - Fix --with-ipaddr-display option test. Fix from Jarno Huuskonen 
+   <jhuuskon@hytti.uku.fi>
 
 20000116
  - Renamed --with-xauth-path to --with-xauth
