--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20000118
+ - Fixed --with-pid-dir option
+
 20000117
  - Clean up bsd-bindresvport.c. Use arc4random() for picking initial
    port, ignore EINVAL errors (Linux) when searching for free port.
