- Makefile fix from Gary E. Miller <gem@rellim.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20000118
  - Fixed --with-pid-dir option
+ - Makefile fix from Gary E. Miller <gem@rellim.com>
 
 20000117
  - Clean up bsd-bindresvport.c. Use arc4random() for picking initial
