--- a/INSTALL
+++ b/INSTALL
@@ -150,6 +150,12 @@ created.
 libsocks library isn't installed in a library searched by the compiler,
 add the directory name as the option.
 
+--with-ipv4-default instructs OpenSSH to use IPv4 by default for new
+connections. Normally OpenSSH will try attempt to lookup both IPv6 and
+IPv4 addresses. On Linux/glibc-2.1.2 this causes long delays in name
+resolution. If this option is specified, you can still attempt to 
+connect to IPv6 addresses using the command line option '-6'.
+
 If you need to pass special options to the compiler or linker, you
 can specify these as enviornment variables before running ./configure.
 For example:
