- Big manpage and config file cleanup from Andre Lucas    <andre.lucas@dial.pipex.com>    - Re-added latest (unmodified) OpenBSD manpages

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
      - split key exchange (kex) and user authentication (user-auth), ok: provos@
  - Big manpage and config file cleanup from Andre Lucas
    <andre.lucas@dial.pipex.com>
+   - Re-added latest (unmodified) OpenBSD manpages
 
 20000119
  - SCO compile fixes from Gary E. Miller <gem@rellim.com>
