- Merge preformatted manpage patch from Andre Lucas    <andre.lucas@dial.pipex.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20000122
  - Fix compilation of bsd-snprintf.c on Solaris, fix from Ben Taylor
    <bent@clark.net>
+ - Merge preformatted manpage patch from Andre Lucas
+   <andre.lucas@dial.pipex.com>
 
 20000120
  - Don't use getaddrinfo on AIX
