--- a/ssh-keygen.1
+++ b/ssh-keygen.1
@@ -134,7 +134,7 @@ newer versions bore successively more restrictive licenses.  This version
 of OpenSSH
 .Bl -bullet
 .It
-has all components of a restrictive nature (ie. patents, see
+has all components of a restrictive nature (i.e., patents, see
 .Xr ssl 8 )
 directly removed from the source code; any licensed or patented components
 are chosen from
