--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
      getsockname() requires initialized tolen; andy@guildsoftware.com
  - AIX patch from Matt Richards <v2matt@btv.ibm.com> and David Rankin 
    <drankin@bohemians.lexington.ky.us>
+ - Fix lastlog support, patch from Andre Lucas <andre.lucas@dial.pipex.com>
 
 20000122
  - Fix compilation of bsd-snprintf.c on Solaris, fix from Ben Taylor
