--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000125
+ - Fix NULL pointer dereference in login.c. Fix from Andre Lucas 
+   <andre.lucas@dial.pipex.com>
+
 20000124
  - Pick up version 1.2.2 from OpenBSD CVS (no changes, just version number
    increment)
