--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20000127
  - Seed OpenSSL's random number generator before generating RSA keypairs
  - Split random collector into seperate file
+ - Compile fix from Andre Lucas <andre.lucas@dial.pipex.com>
 
 20000126
  - Released 1.2.2 stable
