--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000202
+ - Fix lastlog code for directory based lastlogs. Fix from Josh Durham 
+   <jmd@aoe.vt.edu>
+
 20000201
  - Use socket pairs by default (instead of pipes). Prevents race condition
    on several (buggy) OSs. Report and fix from tridge@linuxcare.com
