--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20000202
  - Fix lastlog code for directory based lastlogs. Fix from Josh Durham 
    <jmd@aoe.vt.edu>
+ - Documentation fixes from HARUYAMA Seigo <haruyama@nt.phys.s.u-tokyo.ac.jp>
+ - Added URLs to Japanese translations of documents by HARUYAMA Seigo 
+   <haruyama@nt.phys.s.u-tokyo.ac.jp>
 
 20000201
  - Use socket pairs by default (instead of pipes). Prevents race condition
