--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20000203
+ - Fixed SEGVs in authloop, fix from vbzoli@hbrt.hu
+
 20000202
  - Fix lastlog code for directory based lastlogs. Fix from Josh Durham 
    <jmd@aoe.vt.edu>
