- Avoid warning message with Unix98 ptys

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
      to detect library and header location _and_ ensure library has proper
      RSA support built in (this is a problem with OpenSSL 0.9.5).
  - Applied pty cleanup patch from markus.friedl@informatik.uni-erlangen.de
+ - Avoid warning message with Unix98 ptys
 
 20000207
  - Removed SOCKS code. Will support through a ProxyCommand.
