- Warning was valid - possible race condition on PTYs. Avoided using    platform-specific code.  - Document some common problems

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@
      RSA support built in (this is a problem with OpenSSL 0.9.5).
  - Applied pty cleanup patch from markus.friedl@informatik.uni-erlangen.de
  - Avoid warning message with Unix98 ptys
+ - Warning was valid - possible race condition on PTYs. Avoided using 
+   platform-specific code.
+ - Document some common problems
 
 20000207
  - Removed SOCKS code. Will support through a ProxyCommand.
