--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000303
+ - Added "make host-key" target, Suggestion from Dominik Brettnacher
+ <domi@saargate.de>
+
 20000302
  - Big cleanup of autoconf code
    - Rearranged to be a little more logical
