- DEC Unix compile fix from David Del Piero <David.DelPiero@qed.qld.gov.au>  - Manpage fix from David Del Piero <David.DelPiero@qed.qld.gov.au>

--- a/ssh.1
+++ b/ssh.1
@@ -626,7 +626,7 @@ forward privileged ports.
 Gives the verbosity level that is used when logging messages from
 .Nm ssh .
 The possible values are:
-QUIET, FATAL, ERROR, INFO, CHAT and DEBUG.
+QUIET, FATAL, ERROR, INFO, VERBOSE and DEBUG.
 The default is INFO.
 .It Cm NumberOfPasswordPrompts
 Specifies the number of password prompts before giving up. The
