--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
  - Don't permanently fail on bind() if getaddrinfo has more choices left for 
    us. Needed to work around messy IPv6 on Linux. Patch from Arkadiusz
    Miskiewicz <misiek@pld.org.pl>
+ - DEC Unix compile fix from David Del Piero <David.DelPiero@qed.qld.gov.au>
+ - Manpage fix from David Del Piero <David.DelPiero@qed.qld.gov.au>
 
 20000302
  - Big cleanup of autoconf code
