--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 20000311
  - Detect RSAref
+ - OpenBSD CVS change
+   [sshd.c]
+    - disallow guessing of root password
 
 20000309
  - OpenBSD CVS updates to v1.2.3
