--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 20000314
  - Include macro for IN6_IS_ADDR_V4MAPPED. Report from 
    peter@frontierflying.com
+ - Include /usr/local/include and /usr/local/lib for systems that don't
+   do it themselves
+ - -R/usr/local/lib for Solaris
+ - Fix RSAref detection
+ - Fix IN6_IS_ADDR_V4MAPPED macro
 
 20000311
  - Detect RSAref
