--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000315
+ - Fix broken CFLAGS handling during search for OpenSSL. Fixes va_list
+   problems with gcc/Solaris.
+
 20000314
  - Include macro for IN6_IS_ADDR_V4MAPPED. Report from 
    peter@frontierflying.com
