--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20000315
  - Fix broken CFLAGS handling during search for OpenSSL. Fixes va_list
    problems with gcc/Solaris.
+ - Don't free argument to putenv() after use (in setenv() replacement). 
+   Report from Seigo Tanimura <tanimura@r.dl.itc.u-tokyo.ac.jp>
 
 20000314
  - Include macro for IN6_IS_ADDR_V4MAPPED. Report from 
