--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,12 @@
    problems with gcc/Solaris.
  - Don't free argument to putenv() after use (in setenv() replacement). 
    Report from Seigo Tanimura <tanimura@r.dl.itc.u-tokyo.ac.jp>
+ - Created contrib/ subdirectory. Included helpers from Phil Hands' 
+   Debian package, README file and chroot patch from Ricardo Cerqueira
+   <rmcc@clix.pt>
+ - Moved gnome-ssh-askpass.c to contrib directory and reomved config 
+   option.
+ - Slight cleanup to doc files
 
 20000314
  - Include macro for IN6_IS_ADDR_V4MAPPED. Report from 
