--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
  - Moved gnome-ssh-askpass.c to contrib directory and reomved config 
    option.
  - Slight cleanup to doc files
+ - Configure fix from Bratislav ILICH <bilic@zepter.ru>
 
 20000314
  - Include macro for IN6_IS_ADDR_V4MAPPED. Report from 
