--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20000316
  - Fixed configure not passing LDFLAGS to Solaris. Report from David G. 
    Hesprich <dghespri@sprintparanet.com>
+ - Propogate LD through to Makefile
 
 20000315
  - Fix broken CFLAGS handling during search for OpenSSL. Fixes va_list
