--- a/INSTALL
+++ b/INSTALL
@@ -67,12 +67,12 @@ make install
 This will install the binaries in /opt/{bin,lib,sbin}, but will place the
 configuration files in /etc/ssh.
 
-If you are using PAM, you will need to manually install a PAM control
-file as "/etc/pam.d/sshd" (or wherever your system prefers to keep
-them). A generic PAM configuration is included as "sshd.pam.generic",
-you may need to edit it before using it on your system. If you are 
-using a recent version of Redhat Linux, the config file in 
-packages/redhat/sshd.pam should be more useful.
+If you are using PAM, you will need to manually install a PAM
+control file as "/etc/pam.d/sshd" (or wherever your system
+prefers to keep them). A generic PAM configuration is included as
+"contrib/sshd.pam.generic", you may need to edit it before using it on
+your system. If you are using a recent version of Redhat Linux, the
+config file in contrib/redhat/sshd.pam should be more useful.
 
 There are a few other options to the configure script:
 
@@ -148,11 +148,14 @@ connect to IPv6 addresses using the command line option '-6'.
 --with-ssl-dir=DIR allows you to specify where your OpenSSL libraries
 are installed.
 
+--with-4in6 Check for IPv4 in IPv6 mapped addresses and convert them to
+real (AF_INET) IPv4 addresses. Works around some quirks on Linux.
+
 If you need to pass special options to the compiler or linker, you
 can specify these as enviornment variables before running ./configure.
 For example:
 
-CFLAGS="-O -m486" LFLAGS="-s" ./configure
+CFLAGS="-O -m486" LFLAGS="-s" LIBS="-lrubbish" LD="/usr/foo/ld" ./configure
 
 3. Configuration
 ----------------
