--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    Hesprich <dghespri@sprintparanet.com>
  - Propogate LD through to Makefile
  - Doc cleanups
+ - Added blurb about "scp: command not found" errors to UPGRADING
 
 20000315
  - Fix broken CFLAGS handling during search for OpenSSL. Fixes va_list
